--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,42 @@
 /* Add your own CSS rules here */
 h1 {
   text-align: center;
+  background-color: #00FFFF;
+  border-color: fuschia;
+  border-width: 10%; 
+}
+
+h2 {
+	text-align: center;
+}
+
+h3 {
+	text-align: center;
+}
+
+h4 {
+	text-align: center;
+}
+
+h5 {
+	text-align: center;
+}
+
+table, th, td {
+	border: 1px solid black;
+}
+
+table {
+	width: 25%;
+	height: 25%;
 }
 
 g[class='note'] {
-  color: fuchsia;
+  color: red;
 }
 
 .highlighted {
-  fill: aqua
+  fill: blue
 }
 
 #controls {
